src/test/deca/context/valid/print-string.deca
// Description:
//    print d'une string.
//
// Resultats:
//    Hello, world!
//
// Historique:
//    cree le 06/01/2023

{
        print("Hello, world!", "Bye!");
}
