src/test/deca/context/invalid/print-boolean.deca
// Description:
//    Condition de la règle 3.31 non respectée 
//
// Resultats:
//    Ligne 10: print ne peut prendre qu'un int ou un float ou une string
//

{
    print(false);
}
